--- a/redes-sociais-main/graficos/index.html
+++ b/redes-sociais-main/graficos/index.html
@@ -24,6 +24,7 @@
     <footer>
         <p> Desenvolvido por Nicolas e Gean </p>
     </footer>
+    <script type="module" src="gradicos/informacoesGlobais.js"></script> 
     
 </body>
 </html>
