--- a/redes-sociais-main/graficos/index.html
+++ b/redes-sociais-main/graficos/index.html
@@ -18,7 +18,7 @@
     <main class="graficos-section">
      <section id="graficos-container"
       class="graficos-container">
-         <!--crie os graficos aqui -->
+         <!--crie os graficos/texto aqui -->
     </section>
     </main>
     <footer>
