--- a/redes-sociais-main/graficos/index.html
+++ b/redes-sociais-main/graficos/index.html
@@ -25,6 +25,7 @@
         <p> Desenvolvido por Nicolas e Gean </p>
     </footer>
     <script type="module" src="gradicos/informacoesGlobais.js"></script> 
+    <script type="module"src="graficos/quantidadeUsuarios.js"></script>
     
 </body>
 </html>
